--- a/blog-front/css/detail.css
+++ b/blog-front/css/detail.css
@@ -1,6 +1,6 @@
 #track-area {
     position: absolute;
-    top: 10%;
+    top: 15%;
     left: 20%;
 }
 
@@ -12,4 +12,39 @@
 .title {
     font-size: 1.5em;
     font-weight: bold;
+}
+
+#modal-button {
+    margin-top: 30px;
+    width: 300px;
+    height: 60px;
+}
+
+#board-input {
+    margin-top: 10px;
+    margin-bottom: 50px;
+    width: 1000px;
+    height: 300px;
+    border-radius: 50px;
+    border: 1px solid lightgray;
+    padding: 50px;
+}
+
+#board-input:focus, #tag-input:focus {
+    outline: auto;
+    box-shadow: none;
+    border: 1px solid #ccc;   
+}
+
+#tag-input {
+    margin-top: 50px;
+    width: 1000px;
+    height: 50px;
+    border-radius: 30px;
+    border: 1px solid lightgray;
+    padding: 13px;
+}
+
+#modal-area {
+    text-align: center;
 }
