--- a/blog-front/css/detail.css
+++ b/blog-front/css/detail.css
@@ -62,3 +62,49 @@
     font-size: 30px;
     font-weight: bold;
 }
+
+.hashtag-elements:hover {
+    cursor: pointer;
+    background-color: rgb(191, 191, 191);
+}
+
+#board-area {
+    position: absolute;
+    top: 60%;
+    left: 20%;
+    width: 80%;
+    padding: 30px;
+}
+
+.form-check-input:checked {
+    background-color: black !important;
+}
+
+.form-check-input:focus {
+    box-shadow: 0 0 0 1px black !important;
+  }
+
+.board-element {
+    background-color: rgb(236, 235, 235);
+    border-radius: 30px;
+    margin-right: 30px;
+    padding: 20px;
+}
+
+.tag-element {
+    display: inline-block;
+    background-color: lightgray;
+    border-radius: 10px;
+    padding: 5px;
+    margin: 2px;
+}
+
+.content-area {
+    margin-left: 10px;
+    margin-top: 10px
+}
+
+.board-element:hover {
+    cursor: pointer;
+    background-color: rgb(226, 225, 225);
+}
