--- a/blog-front/css/board.css
+++ b/blog-front/css/board.css
@@ -3,10 +3,35 @@
     top: 20%;
     left: 25%;
     background-color: rgb(236, 236, 236);
-    width: 60%;
+    width: 58%;
     height: auto;
     border-radius: 30px;
     padding: 30px;
+}
+
+.board-element {
+    background-color: rgb(236, 235, 235);
+    border-radius: 30px;
+    margin-right: 30px;
+    padding: 20px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    width: 70%;
+}
+
+#comment-area {
+    position: absolute;
+    top: 60%;
+    left: 20%;
+    width: 100%;
+}
+
+.nickname-area {
+    float: right;
+}
+
+.board-element {
+    cursor: pointer;
 }
 
 .tag-elements {
@@ -45,7 +70,7 @@
 #comment-input {
     margin-left: 30px;
     margin-right: 20px;
-    width: 700px;
+    width:50%;
     border: 0px;
     border-bottom: 3px solid black;
 }
@@ -91,6 +116,11 @@
 .comment-element:hover .replies-button {
     cursor: pointer;
     visibility: visible!important;
+    width: 80%;
+}
+
+.comment-elements {
+    width: 60%;
 }
 
 .replies-input {
@@ -107,12 +137,12 @@
     box-shadow: none;
 }
 
-.replies-button {
+.reply-input-btn {
     margin-left: 10px;
     margin-bottom: 3px;
 }
 
 .reply-list {
-    margin-left: 30px;
+    margin-left: 10px;
     color: gray;
 }
