refactor: 클라이언트단 자잘한 수정 및 파일 등록 기능 추가

--- a/blog-front/css/detail.css
+++ b/blog-front/css/detail.css
@@ -23,7 +23,7 @@
 #board-input {
     margin-top: 10px;
     margin-bottom: 50px;
-    width: 1000px;
+    width: 90%;
     height: 300px;
     border-radius: 50px;
     border: 1px solid lightgray;
