fix: 클라이언트단 글 등록 중 이미지 삭제 시 formData에 반영하여 request

--- a/blog-front/css/file.css
+++ b/blog-front/css/file.css
@@ -14,3 +14,6 @@ body {background: #f6f6f6; color: #444; font-family: 'Roboto', sans-serif; font-
 .uploaded_file_view.show {opacity: 1;}
 .error_msg {text-align: center; color: #aaa}
 .img_div {display: inline;}
+.img_div_wrapper {display: flex;
+    align-items: center; /* 수직 중앙 정렬 */
+  }
